--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
 	<div class="chamada1">
 		<h2>Smart Helpp<br />
-		Venda de Relogios e Acessorios!</h2>
-		<p>Aqui você encontra os melhores preços para compras do seus Relogios e Acessorios!</p>
+		Venda de Relogios e Acessórios!</h2>
+		<p>Aqui você encontra os melhores preços para compras do seus Relogios e Acessórios!</p>
 	</div><!--chamada1-->
 
 	</div><!--container-->
@@ -112,7 +112,7 @@
 <div class="part1">
 <div class="wraper-part1">
 <h2>Nosso time</h2>
-<p>Nossa equipe e composta por diversos profissionais, graças a eles somos umas das principais empresa na area de venda relogios e acessorios, claro você tambem faz parte do nosso time e agradeçemos por estar junto conosco.
+<p>Nossa equipe e composta por diversos profissionais, graças a eles somos umas das principais empresa na area de venda relogios e acessórios, claro você tambem faz parte do nosso time e agradeçemos por estar junto conosco.
 	Ao lado alguns dos nossos representantes estão lhe enviado uma mensagem de agradecimento!
 </p>
 </div>
@@ -226,8 +226,8 @@
 
 <footer>
 	<div class="container">
-		<p>Todos os direitos reservados</p>
-		<p>contato@dankicode.com</p>
+		<p>Todos os direitos reservados para Smart Helpp Desenvolvimento</p>
+		<a href="https://instagram.com/smarthelpp?igshid=OGQ5ZDc2ODk2ZA=="><p>Instragram</p></a>
 		<div class="clear"></div>
 	</div><!--container-->
 </footer>
